RAII Wrapping the basic webserver. Fixing the websocket chat example.

--- a/AppServer/src/CMakeLists.txt
+++ b/AppServer/src/CMakeLists.txt
@@ -10,24 +10,15 @@ MACRO(SUBDIRLIST result curdir)
   SET(${result} ${dirlist})
 ENDMACRO()
 
-#Define the minimum cmake version required
-CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
-#Define the project name
-PROJECT(AppServer)
 
-#Include the current directory
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
-
+cmake_minimum_required(VERSION 2.8.9)
+project(AppServer)
+ 
+file(GLOB_RECURSE SOURCES "./*.cpp" "./*.c")
+ 
 #List the subdirectories
 SUBDIRLIST(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR})
 
-#Adds the subdirectories sources as libraries
-FOREACH(subdir ${SUBDIRS})
-	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/${subdir})
-	ADD_SUBDIRECTORY(${subdir})
-	SET(EXTRA_LIBS ${EXTRA_LIBS} ${subdir})
-ENDFOREACH()
-
-#Adds the exec and links with the libraries
-ADD_EXECUTABLE(AppServer websocket_chat.c)
-TARGET_LINK_LIBRARIES(AppServer ${EXTRA_LIBS})
+include_directories(${SUBDIRS})
+ 
+add_executable(AppServer ${SOURCES})
