--- a/AppServer/src/CMakeLists.txt
+++ b/AppServer/src/CMakeLists.txt
@@ -13,6 +13,8 @@ ENDMACRO()
 
 cmake_minimum_required(VERSION 2.8.9)
 project(AppServer)
+
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O0 -Wall -coverage")
  
 file(GLOB_RECURSE SOURCES "./*.cpp" "./*.c")
  
