--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,10 @@ language: c++
 sudo: required
 
 before_install:
+
+- sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
 - sudo apt-get -qq update
-- sudo apt-get install -y gcc
+- sudo apt-get install -y g++-4.8
 - sudo apt-get install -y libgflags-dev
 - sudo apt-get install -y libsnappy-dev
 - sudo apt-get install -y libbz2-dev
