--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ sudo: required
 before_install:
 
 - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+- sudo add-apt-repository -y ppa:llvm-toolchain-precise-3.6
 - sudo apt-get -qq update
 - sudo apt-get install -y g++-4.8
 - sudo apt-get install -y libgflags-dev
