--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,19 @@
 notifications:
   slack: fiuba-studygroup:JCoNT2yk90mmc154Rh4nZgml
 
-language: c++
-
 sudo: required
 
-before_install:
+language: cpp
 
-- sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-- sudo add-apt-repository -y ppa:llvm-toolchain-precise-3.6
-- sudo apt-get -qq update
+matrix:
+  include:
+    - os: linux
+      addons:
+         apt:
+            sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.6']
+            packages: ['libbz2-dev', 'libsnappy-dev', 'libgflags-dev']
+
+before_install:
 - sudo apt-get install -y g++-4.8
 - sudo apt-get install -y libgflags-dev
 - sudo apt-get install -y libsnappy-dev
