--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,8 @@ language: cpp
 before_install:
 - sudo sed -i 's/^#\s*\(deb.*universe\)$/\1/g' /etc/apt/sources.list
 - sudo sed -i 's/^#\s*\(deb.*multiverse\)$/\1/g' /etc/apt/sources.list
-- sudo add-apt-repository universe
-- sudo apt-get update
-- sudo apt-get -y install gcc-4.7 libsnappy-dev zlib1g-dev libbz2-dev gflags
+- sudo apt-get -qq update
+- sudo apt-get -y install gcc-4.7 libsnappy-dev zlib1g-dev libbz2-dev libgflags-dev
 
 script:
 - cd AppServer/build
